<resources>
    <string name="app_name">VenUX</string>
    <string name="start">start</string>
    <string name="instructions">Instructions</string>
    <string name="welcome_txt">Welcome to the game</string>
    <string name="playGame_btn_start">Start</string>
    <string name="playGame_btn_resetGame">RestartGame</string>
    <string name="playGame_toDo">toDo</string>
    <string name="kopy_nkopy">KOPY\nKOPY</string>
    <string name="playerSetup_kopy_nkopy">KOPY\nKOPY</string>
    <string name="player_1_name">"Player 1 "</string>
    <string name="player_2_name">"Player 2 "</string>
    <string name="playerSetup_instruction">Instruction</string>
    <string name="kopy_kopy">KOPY KOPY</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="ready">Ready</string>
    <string name="get_ready">Are you ready?</string>
    <string name="name_player_1">Player_1</string>
    <string name="add_another_player">Add another player</string>
    <string name="plus">+</string>
    <string name="winnerTV">WINNER</string>
    <string name="name_player_5">Player 5</string>
    <string name="return_home_text">CONTINUE</string>
    <string name="name_player_6">Player 6</string>
    <string name="name_player_4">Player 4</string>
    <string name="name_player_3">Player 3</string>
    <string name="name_player_2">Player 2</string>
    <string name="color_player_2">color</string>
    <string name="color_player_1">color</string>
    <string name="color_player_4">color</string>
    <string name="color_player_5">color</string>
    <string name="color_player_6">color</string>
    <string name="add_player">Add another player</string>
    <string name="color_player_3">color</string>
    <string name="element_text">element text</string>
    <string name="get_ready_display">Are you ready?</string>
    <string name="get_ready_Tv">I\'M READY</string>
    <string name="textview">TextView</string>
    <string name="instruction_desc">TODO</string>
    <string name="textview">TextView</string>

</resources>