<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/start_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_txt"
        android:layout_width="139dp"
        android:layout_height="42dp"
        android:text="@string/welcome_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/start"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt"
        tools:layout_editor_absoluteX="161dp" />

    <Button
        android:id="@+id/instr_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/instructions"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        tools:layout_editor_absoluteX="140dp" />

</androidx.constraintlayout.widget.ConstraintLayout>