<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/PlayerSetupConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_theme_bg"
    android:onClick="startGame"
    tools:context=".activities.PlayerSetupActivity">

    <Button
        android:id="@+id/playerSetup_btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:width="400dp"
        android:height="75dp"
        android:insetLeft="32dp"
        android:insetRight="32dp"
        android:onClick="startGame"
        android:text="@string/start"
        android:textColor="#000000"
        android:textSize="24sp"
        app:backgroundTint="#FFFFFF"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.454"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/playerSetup_instruction_btn"
        android:layout_width="131dp"
        android:layout_height="42dp"
        android:onClick="goToInstructions"
        android:text="@string/playerSetup_instruction"
        android:textSize="12sp"
        app:cornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerSetup_btn_start"
        app:layout_constraintVertical_bias="0.466" />

    <LinearLayout
        android:id="@+id/linearLayoutAddPlayer"
        android:layout_width="367dp"
        android:layout_height="67dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_shape"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        app:layout_constraintBottom_toTopOf="@+id/playerSetup_btn_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/playerSetup_addPlayerField"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/add_another_player"
            android:inputType="textPersonName" />

        <Space
            android:layout_width="30dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/playerSetup_addPlayer_btn"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="addPlayer"
            android:text="@string/plus"
            app:cornerRadius="25dp" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="312dp"
        android:layout_height="422dp"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutAddPlayer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>